--- a/google.css
+++ b/google.css
@@ -354,9 +354,10 @@ nav ul li a:hover{
     .google-textImg {
     width: calc(30% - 10px); /*Two containers per row */
     }
- }
+}
     
-    @media (max-width: 900px) {
+
+@media (max-width: 900px) {
     .google-box {
     width: 40%;
     right: 3%;
@@ -365,9 +366,9 @@ nav ul li a:hover{
     width: calc(30% - 10px); /* Two containers per row */
     }
     
-    }
+}
     
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
     .google-box {
     width: 56%;
     right: 3%;
@@ -376,10 +377,9 @@ nav ul li a:hover{
     width: calc(30% - 10px); /* Two containers per row */
     }
 
-  
-    }
+}
     
-    @media (max-width: 500px) {
+@media (max-width: 500px) {
     .google-box {
     width: 80%;
     right: 5%;
@@ -389,7 +389,6 @@ nav ul li a:hover{
 
     .google-textImg {
     width: calc(50% - 10px); /* One container per row */
-    }
     }
 
     .container-app{
@@ -412,9 +411,10 @@ nav ul li a:hover{
     
     
     }
+}
 
-    
-    @media (max-width: 480px) {
+     
+@media (max-width: 480px) {
     .google-box {
     width: 100%;
     right: 5%;
@@ -424,78 +424,32 @@ nav ul li a:hover{
     .google-textImg{
     width: calc(32% - 10px); /* One container per row */
     }
+
+}
+
+/* website media query */
+
+@media(max-width:480px){
+
+    .container nav{
+        position: absolute;
+        top: 0;
+        width: 100%;
+        display: flex;
+        left: 20%;
     }
-
- @media screen and (max-width:900px) {
-    .all, .image{
-        display: block;
-        font-family: sans-serif;
-        font-size: 15px;
-    }
-
-    .container nav ul li:nth-child(4){
-        display: none;
-    }
-    .container nav ul li:nth-child(5){
-        display: none;
-    }
-
-    .noti{
-        display: block;
-    }
-
-    .noti-text{
-        display: block;
-        right:112px;
-        top: 20px;
-    }
-
-
-    .image{
-        padding-right: 520px;
-    }
-
-
-    .container nav ul li:first-child a{
-        color: blue;
-        border-bottom: 1px solid blue;
-        font-weight: 700;
-    }
-
-    .main{
-        /* margin-top: -250px; */
-        margin-top: -100px;
-
-    }
-
-
-
-    .footer .row.row2{
-        padding: 10px 300px ;
+    
+    nav ul{
         display: flex;
         align-items: center;
-        flex-direction: column;
-        background-color:#f2f2f2;
+        justify-content: center;
     
     }
 
-    .footer .row.row2 ul li{
-        margin-top: 8px;
-    }
-    
-    .third{
-        display: none;
-    }
-    
-    .second{
-        display: none;
-    }
+   .all, .image{
+    display: block;
+   }
 
-} 
-
-
- @media screen and (max-width:500px) {
-  
     .noti{
         display: block;
     }
@@ -505,31 +459,29 @@ nav ul li a:hover{
         right:114px;
         top: 18px;
     }
-
     .container nav ul li:nth-child(4){
         display: none;
     }
-
     .container nav ul li:nth-child(5){
         display: none;
     }
-
+       
     
-    .container nav .all , .container nav .image{
-        display: block;
-        font-family: sans-serif;
-        font-size: 12px;
-    }
-
-
     .main{
-        width: 350px;
+        width: 500px;
         margin: 50px auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+
+   .main .img{
+    width: 100%;
+    height: 100%;
+   }
 
    .googleLogo{
-    width: 150px;
-    /* margin-top: 5px; */
+    margin-left: 90px;
    }
 
     .microphone{
@@ -540,7 +492,74 @@ nav ul li a:hover{
         display: none;
     }
 
+    .container .main .searchBox{
+        position: relative;
+        width: 100%;
+    }
+    
+    .search{
+        width: 100%;
+        padding: 11px;
+        border-radius: 20px;
+        margin-left: 40px;
+        border: 1px solid #dedede;
+        outline:none;
+        font-size: 14px;
+    }
+    
+    .search:hover{
+        box-shadow: 0 2px 10px -7px #000;
+        cursor: pointer;
+    
+    }
 
+    .icons{
+        position: absolute;
+        top: 0px;
+        left: 38px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        pointer-events: none;
+    }
+
+    
+.languages{
+    margin-top:15px ;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    flex-direction: column;
+   
+}
+
+.languages li{
+    list-style-type: none;
+    margin: 0 5px;
+    font-size: 14px;
+    font-family: sans-serif;
+    padding: 0px 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.languages li a{
+    text-decoration: none;
+}
+
+.languages li a:hover{
+    text-decoration: underline;
+}
+
+    .languages li:first-child{
+        display: block;
+        text-align: center;
+    }
 
     .footer .row.row2{
         padding: 5px 50px ;
@@ -551,13 +570,12 @@ nav ul li a:hover{
     
     }
 
-.third{
-    display: none;
-}
+    .third{
+        display: none;
+    }
 
-.second{
-    display: none;
+    .second{
+        display: none;
+    }
 }
-
-} 
 
